Not using CVS anymore, removed dead link

--- a/docs-mini/FlightGear-FAQ.html
+++ b/docs-mini/FlightGear-FAQ.html
@@ -285,12 +285,12 @@
     </b>
         <div class="indent">
           <p>The latest development code is available for everyone through our
-          CVS repository.  See
-          <a href="http://flightgear.org/cvsResources/">http://flightgear.org/cvsResources/</a> for details.
+          git repository.  See
+          <a href="http://wiki.flightgear.org/FlightGear_and_Git">http://wiki.flightgear.org/FlightGear_and_Git</a> for details.
           </p>
           <p>Otherwise, you can get relatively up-to-date snapshots of the
           development tree at
-          <a href="ftp://flightgear.sourceforge.net/pub/flightgear/Devel/Snapshots/">ftp://flightgear.sourceforge.net/pub/flightgear/Devel/Snapshots/</a>.
+          <a href="http://flightgear.simpits.org:8080/">http://flightgear.simpits.org:8080/</a>, which are recompiled at every git commit.
           </p>
         </div>
       
